--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 <nav>
     <ul  class="VERTICAL">
         <li><A href="index.html" class="nav-menu">INICIO </A></li>
-        <li><A href="pagina1" class="nav-menu">pagina1 </A></li>
-        <li><A href="pagina2" class="nav-menu">pagina1</A></li>
-        <li><A href="pagina3" class="nav-menu">pagina1</A></li>
-        <li><A href="pagina4" class="nav-menu">pagina1</A></li>
+        <li><A href="pagina1.html" class="nav-menu">pagina1 </A></li>
+        <li><A href="pagina2.html" class="nav-menu">pagina2</A></li>
+        <li><A href="pagina3" class="nav-menu">pagina3</A></li>
+        <li><A href="pagina4" class="nav-menu">pagina4</A></li>
     </nav>
 </main>
     <div class="clearfix"></div>
