--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <li><A href="index.html" class="nav-menu">INICIO </A></li>
         <li><A href="pagina1.html" class="nav-menu">pagina1 </A></li>
         <li><A href="pagina2.html" class="nav-menu">pagina2</A></li>
-        <li><A href="pagina3" class="nav-menu">pagina3</A></li>
+        <li><A href="pagina3.html" class="nav-menu">pagina3</A></li>
         <li><A href="pagina4" class="nav-menu">pagina4</A></li>
     </nav>
 </main>
@@ -46,7 +46,8 @@
     </aside>
     <div class="clearfix"></div>
     <footer>
-        <H5>ADRIAN CAMILO VELASQUEZ</H5>
+
+        <H5>ADRIAN CAMILO VELASQUEZ Y STEBAN MARTIN CIFUENTES</H5>
         <H5>UNIVERSITARIA DE COLOMBIA</H5>
     </footer>
     </div>
